@@ -1,6 +1,13 @@
 # ChangeLog for sys-auth/nss-pam-ldapd
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-auth/nss-pam-ldapd/ChangeLog,v 1.7 2013/02/07 18:11:37 prometheanfire Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-auth/nss-pam-ldapd/ChangeLog,v 1.8 2013/04/05 15:04:50 prometheanfire Exp $
+
+*nss-pam-ldapd-0.9.0 (05 Apr 2013)
+
+  05 Apr 2013; Matthew Thode <prometheanfire@gentoo.org>
+  +nss-pam-ldapd-0.9.0.ebuild:
+  bump of nss-pam-ldapd to 0.9.0, removed keywords for now, since upstream said
+  it may not be the most stable
 
   07 Feb 2013; Matthew Thode <prometheanfire@gentoo.org> files/nslcd-init:
   updating init scripts for bug 455598
